<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="accessibility_service_description">"Required by the Drivers Utility Helper app to perform certain functions for the user on the device.

DO NOT enable the shortcut feature as this will cause additional problems and could cause the Drivers Utility Helper app from working."</string>
    <string name="account_title_email">Email address</string>
    <string name="account_title_log_in">Sign In</string>
    <string name="account_title_password">Password</string>
    <string name="account_title_referred">Referral code</string>
    <string name="account_title_referred_login">Referral code (optional)</string>
    <string name="account_title_register">Register New Account</string>
    <string name="account_type_holder">Subscription type</string>
    <string name="account_warning">DO NOT USE YOUR DELIVERY APP LOGIN</string>
    <string name="ad_support_message">This ad helps support the Drivers Utility Helper app</string>
    <string name="addPayment">add payment</string>
    <string name="add_bank_account">Add bank account</string>
    <string name="add_new_payment_method">Add a new payment method</string>
    <string name="add_payment_method">Add a payment method</string>
    <string name="added">Added %s</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_country_invalid">Your country is invalid</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_ae_emirate">Emirate</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_au_suburb_or_city">Suburb or city</string>
    <string name="address_label_bb_jm_parish">Parish</string>
    <string name="address_label_cedex">Cedex</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_country_or_region">Country or region</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_department">Department</string>
    <string name="address_label_district">District</string>
    <string name="address_label_full_name">Full name</string>
    <string name="address_label_hk_area">Area</string>
    <string name="address_label_ie_eircode">Eircode</string>
    <string name="address_label_ie_townland">Townland</string>
    <string name="address_label_in_pin">Pin</string>
    <string name="address_label_island">Island</string>
    <string name="address_label_jp_prefecture">Prefecture</string>
    <string name="address_label_kr_do_si">Do Si</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_neighborhood">Neighborhood</string>
    <string name="address_label_oblast">Oblast</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_post_town">Post or Town</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_suburb">Suburb</string>
    <string name="address_label_village_township">Village or Township</string>
    <string name="address_label_zip_code">ZIP Code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid.</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="btn_deny_camera">Deny Camera Permissions</string>
    <string name="btn_enable_acc">Allow accessibility permissions</string>
    <string name="btn_enable_camera">Enable Camera Permissions</string>
    <string name="btn_enable_location">Allow location access</string>
    <string name="btn_skip_notification">Skip this step</string>
    <string name="imageView">imageViewHolder</string>
    <string name="label_collision_repair">Collision repairs</string>
    <string name="label_deactivation">Deactivation</string>
    <string name="label_distance">Distance</string>
    <string name="label_hospitalization">Hospitalization</string>
    <string name="label_payout">Offer</string>
    <string name="label_per_mile">Per mile</string>
    <string name="permissionLocation">To function properly, the <b>Drivers Utility Helper</b>" app needs to access your location.

The app uses your location:

\u0009\u0009• to accurately estimate delivery times and distances

\u0009\u0009• to track your start &amp; stop location"</string>
    <string name="permission_accessibility_desc">To function &amp; assist you properly, the <b>Drivers Utility Helper</b>" app needs permission to access the devices accessibility service.

The app will:

\u0009\u0009• access information needed to assist with accepting or declining orders

\u0009\u0009• access information needed to track shift stats (such as earned amount, distance, time, location, ETC)

\u0009\u0009• NOT access any personal information, including banking information or credit card information without permission directly from you (such as activating a subscription)

\u0009\u0009• perform actions on your behalf, such as accepting or declining orders based off your personal settings"</string>
    <string name="permission_accessibility_title">The <b>Drivers Utility Helper</b> app needs access to your accessibility service</string>
    <string name="permission_camera_desc">To take photos, the <b>Drivers Utility Helper</b> app needs to access your camera.</string>
    <string name="permission_camera_title">The <b>Drivers Utility Helper</b> app needs access to your camera</string>
    <string name="permission_location_title">The <b>Drivers Utility Helper</b>" app needs access to your device's location"</string>
    <string name="placeHolderZero">0.00</string>
    <string name="stringAmountPlaceHolder">$0.00</string>
    <string name="text_amazon_links">Amazon Links</string>
    <string name="text_apps">Apps</string>
    <string name="text_button_get_protection">Get Protection</string>
    <string name="text_cash_saver">Cash Savers</string>
    <string name="text_desc_deactivated">"Middleton Tech Protects replaces up to 80% of your lost income when you're unfairly temporarily suspended"</string>
    <string name="text_desc_dpp_collision">Middleton Tech Protects replaces up to 80% of your lost income while your vehicle is being repaired due to a collision</string>
    <string name="text_desc_dpp_hospital">Middleton Tech Protects replaces up to 80% of your lost income when your hospitalized due to an unforeseeable event</string>
    <string name="text_desc_flex_alert">Flexalert is a utility app that helps manage Amazon flex blocks. Auto tapping, sound alerts and more!</string>
    <string name="text_featured">Featured</string>
    <string name="text_flex_alert">Flexalert</string>
    <string name="text_taxes">Tax Help</string>
    <string name="text_title_dpp_can">Can I still access benefits and protections if I am at fault in an accident?</string>
    <string name="text_title_dpp_do">Do I have protection if I am not working for my gig when the incident happens?</string>
    <string name="text_title_dpp_what">What protections are included?</string>
    <string name="text_title_dpp_why">Why do I need protection?</string>
    <string name="text_title_faq">FAQ</string>
    <string name="text_title_income_protection">Income protection for gig workers</string>
    <string name="text_title_income_protection_desc">"Middleton Tech Protects replaces 80% of your lost income when you can't work due to hospitalization, temporary account deactivations, or post-collision repairs."</string>
    <string name="text_title_paid_time_off">Paid time off when you need it</string>
</resources>