<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/White" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/Black" android:gravity="center" android:id="@id/permission_title" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/permission_camera_title" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <RelativeLayout android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/permission_title" android:layout_centerHorizontal="true" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
        <ImageView android:background="@drawable/ic_camera_icon" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_centerInParent="true" android:contentDescription="@string/imageView" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/buttons_layout" android:layout_below="@id/image">
        <TextView android:textColor="@color/Black" android:id="@id/descText" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_camera_desc" android:fontFamily="@font/bold_" />
    </ScrollView>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buttons_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textColor="@color/White" android:id="@id/btn_deny" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/btn_deny_camera" android:layout_weight="1.0" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:backgroundTint="@color/Gray" />
        <Button android:textColor="@color/White" android:id="@id/btn_enable" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/btn_enable_camera" android:layout_weight="1.0" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:backgroundTint="#ff2e2f32" />
    </LinearLayout>
</RelativeLayout>