<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/totals_frame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <LinearLayout android:orientation="vertical" android:id="@id/payout_frame" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/label_payout" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/Green" android:gravity="center" android:id="@id/payout_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/stringAmountPlaceHolder" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/distance_frame" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_weight="1.0">
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/label_distance" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/text" android:gravity="center" android:id="@id/distance_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/placeHolderZero" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/per_mile_frame" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_weight="1.0">
            <TextView android:gravity="center" android:id="@id/per_mile_field_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/label_per_mile" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/Green" android:gravity="center" android:id="@id/per_mile_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/stringAmountPlaceHolder" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>