<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/text" android:id="@id/tv1" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_featured" android:layout_marginStart="5.0dip" />
        <androidx.recyclerview.widget.RecyclerView android:layout_gravity="center" android:orientation="horizontal" android:id="@id/recyclerview" android:padding="5.0dip" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" />
        <TextView android:textColor="@color/text" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_apps" android:layout_marginStart="5.0dip" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/extras_flex_alert" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" layout="@layout/extras_maxymo" />
        <TextView android:textColor="@color/text" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_amazon_links" android:layout_marginStart="5.0dip" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/extras_amazon_bodycam" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" layout="@layout/extras_amazon_drink_carrier" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" layout="@layout/extras_amazon_hotbags" />
        <TextView android:textColor="@color/text" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_cash_saver" android:layout_marginStart="5.0dip" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" layout="@layout/extras_getupside" />
        <TextView android:textColor="@color/text" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_taxes" android:layout_marginStart="5.0dip" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/extras_keepertax" />
    </LinearLayout>
</ScrollView>