<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/White" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/Black" android:gravity="center" android:id="@id/permission_title" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/permission_accessibility_title" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <RelativeLayout android:id="@id/location_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/permission_title" android:layout_centerHorizontal="true" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
        <ImageView android:background="@drawable/ic_baseline_accessibility_24" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_centerInParent="true" android:contentDescription="@string/imageView" android:backgroundTint="@color/DarkGray" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/btn_enable" android:layout_below="@id/location_image">
        <TextView android:textColor="@color/Black" android:id="@id/descText" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_accessibility_desc" android:fontFamily="@font/bold_" />
    </ScrollView>
    <Button android:textColor="@color/White" android:id="@id/btn_enable" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/btn_enable_acc" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" android:backgroundTint="#ff2e2f32" />
</RelativeLayout>